pdf-visualforce/force-app/main/default/objects/OrderItem/fields/MeasureUnit__c.field-meta.xml
<CustomField>
    <fullName>MeasureUnit__c</fullName>
    <label>Unidade de medida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>LT</fullName>
            </value>
            <value>
                <fullName>KM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>