pdf-visualforce/force-app/main/default/objects/OrderItem/fields/OrderItemCode__c.field-meta.xml
<CustomField>
    <fullName>OrderItemCode__c</fullName>
    <externalId>true</externalId>
    <label>Order Item Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>