pdf-visualforce/force-app/main/default/objects/OrderItem/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <externalId>true</externalId>
    <label>Product Code - External ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>